[package]
name = "quic-mpc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.41"
libp2p = { version = "0.55.0", features = [
  "tokio",
  "gossipsub",
  "kad",
  "dns",
  "macros",
  "identify",
  "autonat",
  "quic",
] }
futures = "0.3.31"
bs58 = "0.5.1"
sha3 = "0.10.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
